# analytics_toolkit

./: .bandit  .gitignore  .pre-commit-config.yaml  .radon.cfg  Analytics_Toolkit_Capabilities_Report.md  Dockerfile  Makefile  README.md  RELEASE_CHECKLIST.md  STREAMLIT_README.md  create_dashboard.py  create_engaging_report.py  docker-compose.yml  enhanced_hierarchical_analysis.py  fresh_metrics_detailed.xlsx  hierarchical_analysis.py  pyproject.toml  streamlit_app.py  streamlit_app_simple.py  test_single_file_analysis.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  docs.yml.disabled  minimal-test.yml  minimal-test.yml.disabled  performance.yml  performance.yml.disabled  poetry-debug.yml  quality-assurance.yml  quality-assurance.yml.disabled  release.yml  release.yml.disabled  simple-pip.yml
code_analysis_reports/: 02_enhanced_analysis_detailed.xlsx  03_hierarchical_analysis_detailed.xlsx  04_deep_analysis_detailed.xlsx  06_pytorch_enhanced_semantics_detailed.xlsx  07_pytorch_deep_detailed.xlsx  README_Analysis_Reports.md
docs/: RELEASE.md  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/_static/: custom.css
docs/api/: models.rst  modules.rst  preprocessing.rst  utils.rst
docs/github_issues/: issue_01_vif_calculation.md  issue_02_prediction_intervals.md  issue_03_target_encoding.md  issue_04_elastic_net.md  issue_05_residual_diagnostics.md  issue_06_regularization_path.md
examples/: advanced_regression_demo.py  automl_examples.py  feature_engineering_examples.py  pytorch_regression_demo.py  scorecard_integration_demo.py  visualization_examples.py
notebooks/: analytics_toolkit_demo.ipynb
pages/: model_comparison.py  preprocessing.py
reports/: analytics_toolkit_comprehensive_report.html  analytics_toolkit_dashboard.html  analytics_toolkit_story.html  arch_overview_1758603132.html  arch_overview_1758603132.md  health_dashboard_1758603132.html  health_dashboard_1758603132.md  index.html
reports/phase91_analysis/: ANALYSIS_SUMMARY.md  demo_implementation_1_comparison.txt  demo_implementation_2_comparison.txt  output_generation_comparison.txt  page_architecture_1_comparison.txt  page_architecture_2_comparison.txt  ui_architecture_comparison.txt
scripts/: README.md  dev.bat  dev.ps1  dev.sh  qa.sh  release.sh
src/analytics_toolkit/: __init__.py  enhanced_analysis_detailed.xlsx  models.py  preprocessing.py  scorecard_integration.py  utils.py
src/analytics_toolkit/automl/: __init__.py  experiment_tracking.py  hyperparameter_tuning.py  model_selection.py  pipeline_builder.py
src/analytics_toolkit/feature_engineering/: __init__.py  encoding.py  interactions.py  selection.py  temporal.py  transformers.py
src/analytics_toolkit/pytorch_regression/: __init__.py  advanced.py  base.py  enhanced_analysis_detailed.xlsx  linear.py  logistic.py  stats.py  transforms.py  utils.py
src/analytics_toolkit/pytorch_regression/tests/: __init__.py  test_linear.py  test_logistic.py  test_stats.py  test_utils.py
src/analytics_toolkit/visualization/: __init__.py  data_profiling.py  interactive.py  model_evaluation.py  statistical.py  themes.py
tests/: conftest.py  test_advanced_regression.py  test_automl.py  test_feature_engineering.py  test_models.py  test_preprocessing.py  test_scorecard_integration.py  test_streamlit_ui.py  test_transforms.py  test_ui_business_logic.py  test_ui_transformations.py  test_utils.py  test_visualization.py
tests/pytorch_regression/: __init__.py  test_linear.py  test_logistic.py  test_stats.py  test_utils.py
ui/: __init__.py
ui/pages/: __init__.py  data_upload.py  feature_engineering.py  home.py  model_comparison.py  model_training.py  preprocessing.py  results_dashboard.py
